--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,61 @@
+/*****************************************************************************
+    Remove margin and padding for all elements
+*/
 * {
     margin: 0;
     padding: 0;
 }
+
+/*****************************************************************************
+    Set default font-family and size
+*/
 body {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 24px;
 }
+
+/*****************************************************************************
+    Setup some styles for the form
+*/
 form {
-    width: 1000px;
+    width: 800px;
     margin: 50px auto;
 }
-form > fieldset {
+
+/*****************************************************************************
+    form border with "title" (<legend>)
+*/
+fieldset {
     padding: 20px;
 }
-fieldset > fieldset {
-    border: none;
-    padding-bottom: 20px;
+/* some horizontal space for the "title" */
+legend {
+    padding: 0 10px;
 }
+
+/*****************************************************************************
+    Input area (login data)
+*/
+#login-data {
+    border: none;
+    padding: 0 0 20px;
+}
+input {
+    border: 1px solid silver;
+    padding: 10px 10px;
+    font-size: 0.8em;
+}
+input[type="email"] {
+    margin-right: 20px;
+}
+
+/*****************************************************************************
+    Submit and reset buttons
+*/
 button {
     background: none;
     padding: 5px 10px;
     border: 2px solid silver;
     border-radius: 5px;
     font-size: 1.1em;
-    /* font-weight: 500; */
-}
-input {
-    border: 1px solid silver;
-    padding: 2px 5px;
-    font-size: 1.1em;
-}
-input[type="email"] {
-    margin-right: 20px;
-}
-::placeholder {
-    color: silver;
 }
